<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/questionStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/want_to_delete"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="list name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/questionStart"
        app:layout_constraintTop_toTopOf="@id/questionStart" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/ques_mark"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/tv_delete_list_name"
        app:layout_constraintTop_toTopOf="@id/tv_delete_list_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/dialog_create_list_background"
        android:text="@string/delete"
        android:textColor="@color/app_theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_delete_list_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/dialog_create_list_background"
        android:text="@string/cancel"
        android:textColor="@color/app_theme_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/tv_delete"
        app:layout_constraintTop_toTopOf="@id/tv_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>