<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.DetailsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/label_date"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00 Jan 2000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/label_date"
        app:layout_constraintStart_toStartOf="@id/label_date"
        android:textColor="@color/black"
        android:id="@+id/tv_date"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/label_shopping_list_name"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="@id/tv_date"
        android:id="@+id/label_shoppingListName"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="my list"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/label_shoppingListName"
        app:layout_constraintStart_toStartOf="@id/label_shoppingListName"
        android:id="@+id/tv_list_name"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/label_budget"
        app:layout_constraintTop_toTopOf="@id/label_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:id="@+id/label_budget"/>

    <LinearLayout
        android:id="@+id/budgetLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_budget"
        app:layout_constraintEnd_toEndOf="@id/label_budget"
        android:orientation="horizontal"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000.00"
            android:textSize="16sp"
            android:textColor="@color/orange"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/-"
            android:textSize="16sp"
            android:textColor="@color/orange"/>


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_balance"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/budgetLayout"
        app:layout_constraintEnd_toEndOf="@id/budgetLayout"
        android:id="@+id/label_balance"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/label_balance"
        app:layout_constraintEnd_toEndOf="@id/label_balance">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000.00"
            android:textSize="16sp"
            android:textColor="@color/green"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/-"
            android:textSize="16sp"
            android:textColor="@color/green"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tv_list_name"
        android:background="@color/app_theme_color"
        android:layout_marginTop="5dp"/>










</androidx.constraintlayout.widget.ConstraintLayout>