<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="15dp"
    tools:context=".ui.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/home_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/app_theme_color"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_thirty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <View
        android:id="@+id/thirty_percent_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/app_theme_color"
        app:layout_constraintBottom_toTopOf="@id/gl_thirty"
        app:layout_constraintTop_toBottomOf="@id/home_activity_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_activity_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_headline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/home_activity_headline"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_app_name"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_create_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/create_list_tv_background"
        android:text="@string/create_list_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/gl_thirty"
        app:layout_constraintEnd_toEndOf="@id/tv_headline" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_thirty"
        android:id="@+id/rv_shopping_list_name"
        />


</androidx.constraintlayout.widget.ConstraintLayout>